[project]
name = "djangoshop"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
]
dependencies = [
    "django>=4.2.11",
    "django-simpleui>=2024.4.1",
    "django-cors-headers>=4.3.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "AGPLv3"}


[tool.pdm]
distribution = false
